this branch is failure

--- a/tests/test_classes.ipynb
+++ b/tests/test_classes.ipynb
@@ -9,7 +9,7 @@
     "from dataclasses import dataclass, field, replace\n",
     "from typing import List, Optional, Tuple, Union\n",
     "import numpy as np\n",
-    "from pprint import pprint as print\n"
+    "from pprint import pprint as print"
    ]
   },
   {
@@ -20,6 +20,7 @@
    "source": [
     "from openptv_python.calibration import rotation_matrix\n",
     "\n",
+    "\n",
     "@dataclass\n",
     "class Exterior:\n",
     "    x0: float = field()\n",
@@ -29,7 +30,7 @@
     "    phi: float = field()\n",
     "    kappa: float = field()\n",
     "    dm: np.ndarray = field(init=False, repr=False)\n",
-    "    \n",
+    "\n",
     "    def rotation_matrix(self) -> np.ndarray:\n",
     "        \"\"\"Return the rotation matrix.\"\"\"\n",
     "        om, ph, ka = self.omega, self.phi, self.kappa\n",
@@ -48,10 +49,9 @@
     "                [np.sin(ph), -np.sin(om) * np.cos(ph), np.cos(om) * np.cos(ph)],\n",
     "            ]\n",
     "        )\n",
-    "        \n",
+    "\n",
     "    def set_rotation_matrix(self) -> None:\n",
-    "        self.replace(dm=rotation_matrix())\n",
-    "        "
+    "        self.replace(dm=rotation_matrix())"
    ]
   },
   {
@@ -60,7 +60,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "@dataclass\n",
     "class ap_52:\n",
     "    k1: float = 0.0\n",
@@ -70,10 +69,9 @@
     "    p2: float = 0.0\n",
     "    scx: float = 1.0\n",
     "    she: float = 0.0\n",
-    "    \n",
+    "\n",
     "    def set_k(self, klist: list) -> None:\n",
-    "        self.k1, self.k2, self.k3 = klist\n",
-    "        "
+    "        self.k1, self.k2, self.k3 = klist"
    ]
   },
   {
@@ -254,6 +252,7 @@
    ],
    "source": [
     "from openptv_python.tracking_frame_buf import Target, TargetArray\n",
+    "\n",
     "t = Target()\n",
     "print(t)"
    ]
