--- a/tests/test_framebuf.ipynb
+++ b/tests/test_framebuf.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Working with Frame and Frame buffer\n"
+    "# Working with Frame and Frame buffer"
    ]
   },
   {
@@ -37,7 +37,7 @@
     }
    ],
    "source": [
-    "fb = FrameBuf() # type: ignore"
+    "fb = FrameBuf()  # type: ignore"
    ]
   },
   {
@@ -67,7 +67,7 @@
     }
    ],
    "source": [
-    "fb = FrameBuf(deque([frame]*4))"
+    "fb = FrameBuf(deque([frame] * 4))"
    ]
   },
   {
