--- a/tests/test_lsqadj.ipynb
+++ b/tests/test_lsqadj.ipynb
@@ -9,6 +9,7 @@
     "import numpy as np\n",
     "from openptv_python.lsqadj import atl, ata\n",
     "\n",
+    "\n",
     "def test_full_matrix_vector_multiplication():\n",
     "    # Test when n equals n_large\n",
     "    n = 3\n",
@@ -21,6 +22,7 @@
     "    atl(u, a, b, m, n, n_large)\n",
     "    print(u)\n",
     "    assert np.array_equal(u, expected_u)\n",
+    "\n",
     "\n",
     "def test_sub_matrix_vector_multiplication():\n",
     "    # Test when n is less than n_large\n",
@@ -35,6 +37,7 @@
     "    print(u, expected_u)\n",
     "    assert np.array_equal(u, expected_u)\n",
     "\n",
+    "\n",
     "def test_valid_matrix_vector_multiplication():\n",
     "    # Test with valid dimensions\n",
     "    n = 3\n",
@@ -47,6 +50,7 @@
     "    atl(u, a, b, m, n, n_large)\n",
     "    print(u)\n",
     "    assert np.array_equal(u, expected_u)\n",
+    "\n",
     "\n",
     "def test_zero_input():\n",
     "    # Test with all zero input\n",
@@ -99,9 +103,9 @@
     }
    ],
    "source": [
-    "a = np.array([[1, 0, 1], [2, 2, 4],[1, 2, 3], [2, 4, 3]])\n",
-    "b = np.zeros((2,2))\n",
-    "ata(a,b,4,2,3)\n",
+    "a = np.array([[1, 0, 1], [2, 2, 4], [1, 2, 3], [2, 4, 3]])\n",
+    "b = np.zeros((2, 2))\n",
+    "ata(a, b, 4, 2, 3)\n",
     "print(b)"
    ]
   },
@@ -111,7 +115,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b = np.zeros((2,2))"
+    "b = np.zeros((2, 2))"
    ]
   },
   {
@@ -138,7 +142,7 @@
     }
    ],
    "source": [
-    "b[1,1]"
+    "b[1, 1]"
    ]
   },
   {
@@ -181,8 +185,8 @@
    "source": [
     "for i in range(2):\n",
     "    for j in range(2):\n",
-    "        print(i,j)\n",
-    "        print(b.flat[i*3 + j])"
+    "        print(i, j)\n",
+    "        print(b.flat[i * 3 + j])"
    ]
   },
   {
@@ -211,12 +215,12 @@
    "source": [
     "def myata(a, m, n, n_large):\n",
     "    ata = np.zeros((n, n_large), dtype=float)\n",
-    "    \n",
+    "\n",
     "    for i in range(n):\n",
     "        for j in range(n_large):\n",
     "            for k in range(m):\n",
     "                ata[i, j] += a[k, i] * a[k, j]\n",
-    "    \n",
+    "\n",
     "    return ata"
    ]
   },
@@ -244,7 +248,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "myata(a,4,2,3)"
+    "myata(a, 4, 2, 3)"
    ]
   },
   {
@@ -255,7 +259,7 @@
    "source": [
     "a = np.array([[1, 0, 1], [2, 2, 4], [1, 2, 3], [2, 4, 3]])\n",
     "print(a)\n",
-    "myata(a,4,3,3)"
+    "myata(a, 4, 3, 3)"
    ]
   },
   {
