--- a/tests/test_take_best_candidates.ipynb
+++ b/tests/test_take_best_candidates.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "import unittest\n",
     "from typing import List, Optional\n",
-    "from dataclasses import dataclass\n",
-    "\n"
+    "from dataclasses import dataclass"
    ]
   },
   {
@@ -43,8 +42,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def take_best_candidates(src: List[n_tupel], dst: List[n_tupel], num_cams: int, num_cands: int, tusage: List[List[int]]) -> int:\n",
+    "def take_best_candidates(\n",
+    "    src: List[n_tupel],\n",
+    "    dst: List[n_tupel],\n",
+    "    num_cams: int,\n",
+    "    num_cands: int,\n",
+    "    tusage: List[List[int]],\n",
+    ") -> int:\n",
     "    taken: int = 0\n",
     "\n",
     "    # Sort candidates by match quality (.corr)\n",
@@ -73,8 +77,7 @@
     "        dst[taken] = src[cand]\n",
     "        taken += 1\n",
     "\n",
-    "    return taken\n",
-    "\n"
+    "    return taken"
    ]
   },
   {
@@ -114,7 +117,7 @@
     "            n_tupel(p=[0, 1, 2, 3], corr=0.9),\n",
     "            n_tupel(p=[1, 2, 3, 4], corr=0.8),\n",
     "            n_tupel(p=[2, 3, 4, 5], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, 6], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, 5, 6], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -131,7 +134,7 @@
     "            n_tupel(p=[0, 1, 2, -1], corr=0.9),\n",
     "            n_tupel(p=[1, 2, 3, -1], corr=0.8),\n",
     "            n_tupel(p=[2, 3, 4, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, 5, -1], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, 5, -1], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -148,7 +151,7 @@
     "            n_tupel(p=[0, 1, -1, -1], corr=0.9),\n",
     "            n_tupel(p=[1, 2, -1, -1], corr=0.8),\n",
     "            n_tupel(p=[2, 3, -1, -1], corr=0.7),\n",
-    "            n_tupel(p=[3, 4, -1, -1], corr=0.6)\n",
+    "            n_tupel(p=[3, 4, -1, -1], corr=0.6),\n",
     "        ]\n",
     "        dst = [None] * len(src)\n",
     "        num_cams = 4\n",
@@ -176,7 +179,7 @@
     "\n",
     "\n",
     "# if __name__ == '__main__':\n",
-    "# \n"
+    "#"
    ]
   }
  ],
