--- a/tests/test_rotation_matrix.ipynb
+++ b/tests/test_rotation_matrix.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "from openptv_python.calibration import Exterior\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -44,8 +44,8 @@
     "    dm[2, 0] = so * sk - co * sp * ck\n",
     "    dm[2, 1] = so * ck + co * sp * sk\n",
     "    dm[2, 2] = co * cp\n",
-    "    \n",
-    "    return dm\n"
+    "\n",
+    "    return dm"
    ]
   },
   {
@@ -64,7 +64,6 @@
     }
    ],
    "source": [
-    "\n",
     "def test_rotation_matrix():\n",
     "    # Known inputs\n",
     "    phi = 0.5\n",
@@ -72,9 +71,13 @@
     "    kappa = 0.2\n",
     "\n",
     "    # Expected output (previously obtained or calculated manually)\n",
-    "    expected_matrix = np.array([[0.83838664, -0.25934338,  0.47942554],\n",
-    "                                [ 0.38062256,  0.90814591, -0.17434874],\n",
-    "                                [-0.39017215,  0.32865183,  0.86008934]])\n",
+    "    expected_matrix = np.array(\n",
+    "        [\n",
+    "            [0.83838664, -0.25934338, 0.47942554],\n",
+    "            [0.38062256, 0.90814591, -0.17434874],\n",
+    "            [-0.39017215, 0.32865183, 0.86008934],\n",
+    "        ]\n",
+    "    )\n",
     "\n",
     "    # Call the rotation_matrix function\n",
     "    result = rotation_matrix(phi, omega, kappa)\n",
@@ -83,7 +86,8 @@
     "    # Compare the result with the expected output\n",
     "    assert np.allclose(result, expected_matrix)\n",
     "\n",
-    "test_rotation_matrix()\n"
+    "\n",
+    "test_rotation_matrix()"
    ]
   }
  ],
