--- a/tests/test_new_calibration_ideas.ipynb
+++ b/tests/test_new_calibration_ideas.ipynb
@@ -15,6 +15,90 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Based on the C tests in liboptv/tests/check_orientation.c\n",
+    "\n",
+    "from openptv_python.imgcoord import image_coordinates\n",
+    "from openptv_python.parameters import OrientPar, read_control_par\n",
+    "from openptv_python.tracking_frame_buf import TargetArray\n",
+    "from openptv_python.trafo import arr_metric_to_pixel\n",
+    "\n",
+    "\n",
+    "control_file_name = \"tests/testing_folder/corresp/control.par\"\n",
+    "# control = ControlPar(4)\n",
+    "control = read_control_par(control_file_name)\n",
+    "\n",
+    "orient_par_file_name = \"tests/testing_folder/corresp/orient.par\"\n",
+    "orient_par = OrientPar().from_file(orient_par_file_name)\n",
+    "\n",
+    "cal = Calibration().from_file(\n",
+    "    \"tests/testing_folder/calibration/cam1.tif.ori\",\n",
+    "    \"tests/testing_folder/calibration/cam1.tif.addpar\",\n",
+    ")\n",
+    "orig_cal = Calibration().from_file(\n",
+    "    \"tests/testing_folder/calibration/cam1.tif.ori\",\n",
+    "    \"tests/testing_folder/calibration/cam1.tif.addpar\",\n",
+    ")\n",
+    "\n",
+    "\n",
+    "def test_external_calibration(self):\n",
+    "    \"\"\"External calibration using clicked points.\"\"\"\n",
+    "    ref_pts = np.array(\n",
+    "        [\n",
+    "            [-40.0, -25.0, 8.0],\n",
+    "            [40.0, -15.0, 0.0],\n",
+    "            [40.0, 15.0, 0.0],\n",
+    "            [40.0, 0.0, 8.0],\n",
+    "        ]\n",
+    "    )\n",
+    "\n",
+    "    # Fake the image points by back-projection\n",
+    "    targets = arr_metric_to_pixel(\n",
+    "        image_coordinates(ref_pts, cal, control.mm),\n",
+    "        control,\n",
+    "    )\n",
+    "\n",
+    "    # Jigg the fake detections to give raw_orient some challenge.\n",
+    "    targets[:, 1] -= 0.1\n",
+    "\n",
+    "    # assertTrue(external_calibration(cal, ref_pts, targets, control))\n",
+    "    np.testing.assert_array_almost_equal(\n",
+    "        cal.get_angles(), orig_cal.get_angles(), decimal=3\n",
+    "    )\n",
+    "    np.testing.assert_array_almost_equal(\n",
+    "        cal.get_pos(), orig_cal.get_pos(), decimal=3\n",
+    "    )\n",
+    "\n",
+    "\"\"\"Full calibration using clicked points.\"\"\"\n",
+    "ref_pts = np.array(\n",
+    "    [\n",
+    "        a.flatten()\n",
+    "        for a in np.meshgrid(np.r_[-60:-30:4j], np.r_[0:15:4j], np.r_[0:15:4j])\n",
+    "    ]\n",
+    ").T\n",
+    "\n",
+    "# Fake the image points by back-projection\n",
+    "targets = arr_metric_to_pixel(\n",
+    "    image_coordinates(ref_pts, cal, control.get_multimedia_params()),\n",
+    "    control,\n",
+    ")\n",
+    "\n",
+    "# Full calibration works with TargetArray objects, not NumPy.\n",
+    "target_array = TargetArray(len(targets))\n",
+    "for i, trgt in enumerate(target_array):\n",
+    "    trgt.set_pnr(i)\n",
+    "    trgt.set_pos(targets[i])\n",
+    "\n",
+    "# Perturb the calibration object, then compore result to original.\n",
+    "cal.set_pos(cal.get_pos() + np.r_[15.0, -15.0, 15.0])\n",
+    "cal.set_angles(cal.get_angles() + np.r_[-0.5, 0.5, -0.5])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -59,10 +143,21 @@
     "    return cost_function(cal, cpar, fix, pix)\n",
     "\n",
     "# Flatten the initial calibration parameters\n",
-    "initial_cal_flat = cal.flatten()\n",
+    "def flat_calibration(cal: Calibration):\n",
+    "    return [cal.ext_par.x0, cal.ext_par.y0, cal.ext_par.z0, \n",
+    "            cal.ext_par.omega, cal.ext_par.phi, cal.ext_par.kappa,\n",
+    "            cal.int_par.xh, cal.int_par.yh, cal.int_par.cc, \n",
+    "            cal.added_par.k1, cal.added_par.k2, cal.added_par.k3, \n",
+    "            cal.added_par.p1, cal.added_par.p2,\n",
+    "            cal.added_par.scx, cal.added_par.she]\n",
+    "    \n",
+    "cal = Calibration()\n",
+    "cal.from_file(\"tests/testing_fodder/calibration/cam0.ori\")\n",
+    "initial_cal_flat = flat_calibration(cal)\n",
+    "\n",
     "\n",
     "# Use Scipy's minimize function\n",
-    "result = minimize(optimize_function, initial_cal_flat, args=(fix, pix), method='L-BFGS-B')\n",
+    "result = minimize(optimize_function, inital_cal_flat, args=(cpar, fix, pix), method='L-BFGS-B')\n",
     "\n",
     "# Reshape the result to obtain the optimized calibration parameters\n",
     "optimized_cal_flat = result.x\n",
