--- a/tests/test_calibration_optimize.ipynb
+++ b/tests/test_calibration_optimize.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# test calibration using scipy.optimize\n"
+    "# test calibration using scipy.optimize"
    ]
   },
   {
